fix(scrollbar): show scrollbar when hovered in safari

--- a/src/less/demos/Less.stories.less
+++ b/src/less/demos/Less.stories.less
@@ -4,5 +4,10 @@
   width: 400px;
   height: 200px;
   border: 1px solid black;
+
   .scrollbar();
+
+  li {
+    margin-right: 4px;
+  }
 }
